# qpcak

./: .gitignore  LICENSE  README.md  architecture.excalidraw  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
engine/: Cargo.toml  roundtrip.mjs  validate.mjs
engine/src/: codebook.rs  index.rs  lib.rs  pack.rs  quantizer.rs  rotation.rs  tests.rs  wasm.rs
examples/: _loadDisk.ts  ask.ts  bench-simd.mjs  build-engine-pack.ts  build-site.ts  build-variants.ts  check-pack.ts  query-qdrant.ts  recall-engine.mjs  recall.ts  wasm-f32.ts  wasm-smoke.ts  wasm-tq.ts
examples/content/: api-keys.md  billing.md  password-reset.md  returns.md  shipping.md  sso.md
examples/demo/: engine.html  engine.ts  index.html  main.ts
extension/: engine-frame.html  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: content.ts  engine-frame.ts  markup.ts  widget.ts
extension/ui/: orb.css  panel.css  panel.html  widget.js
parity/: Cargo.toml
parity/src/: main.rs
site/: index.html  package-lock.json  tsconfig.json
site/src/: App.tsx  index.css
site/src/components/: LandingPage.tsx
src/: build.ts  cli.ts  index.ts  widget.ts
src/core/: answer.ts  embed.ts  loadPack.ts  pack.ts  qdrant.ts  quantize.ts  search.ts  sitemap.ts  source.ts  store.ts  text.ts  turboquant.ts  types.ts  wasm.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
